# radiomind

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  LICENSE  README.md  README_zh.md  demo.py  pyproject.toml
.claude-plugin/: plugin.json
.claude/rules/: information-lookup.md  logs-writing.md  memory-echo.md
.codex/: hooks.json
.codex/hooks/: load-project-rules.sh  stop-reminder.py
docs/: api-reference.md  integration.md  quickstart.md
hooks/: hooks.json
hooks/scripts/: precompact_save.py  session_start.sh
projectBasicInfo/: 00_AGENT_RULES.md  01_PROJECT_OVERVIEW.md
projectBasicInfo/logs/: 2026-04-12-radioheader-init-cc.md  2026-04-13-architecture-design-cc.md  2026-04-13-full-implementation-cc.md  2026-04-14-polish-and-publish-cc.md
rust-core/: Cargo.toml
rust-core/src/: main.rs
rust-core/src/hdc/: mod.rs
rust-core/src/ipc/: mod.rs
rust-core/src/storage/: database.rs  mod.rs  pyramid.rs
src/radiomind/: __init__.py  mcp_server.py  protocol.py  server.py  simple.py
src/radiomind/adapters/: hermes.py  hermes_plugin.yaml  radioheader.py
src/radiomind/cli/: main.py
src/radiomind/community/: pool.py  scoring.py
src/radiomind/core/: config.py  gate.py  llm.py  llm_auto.py  mind.py  types.py
src/radiomind/hooks/: setup.py  stop_hook.py
src/radiomind/meta/: profiles.py
src/radiomind/refinement/: chat.py  dream.py  step.py
tests/: test_community.py  test_config.py  test_daemon.py  test_e2e.py  test_gate.py  test_hdc.py  test_hermes.py  test_knowledge_graph.py  test_llm.py  test_llm_auto.py  test_mcp.py  test_meta.py  test_mind.py  test_protocol.py  test_pyramid.py  test_radioheader.py  test_refinement.py  test_step_refine.py  test_storage.py  test_training.py  test_types.py
(+8 files in other folders)
