[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "radiomind"
version = "0.1.0"
description = "Bionic memory core for AI agents — the brain that grows with you."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Zaptain" }]
keywords = ["ai", "memory", "agent", "bionic", "hdc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24",
    "click>=8.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
ollama = ["ollama>=0.4"]
openai = ["openai>=1.0"]
vec = ["sqlite-vec>=0.1"]
embedding = ["onnxruntime>=1.16", "tokenizers>=0.15"]
all = ["radiomind[ollama,openai,vec,embedding]"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
radiomind = "radiomind.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
